Closed
Bug 244926
Opened 21 years ago
Closed 21 years ago
[FIX]mailto protocol is not worked when using external mailer
Categories
(Core Graveyard :: File Handling, defect, P1)
Core Graveyard
File Handling
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha2
People
(Reporter: masayuki, Assigned: bzbarsky)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
1.12 KB,
patch
|
Biesinger
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040527
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040527
When I click the link of mailto protocol, Mozilla said "mailto is not a
registerd protocol".
However, In the case of normal setting, this problem does not reproduce.
This problem is only reproduced when having
'user_pref("network.protocol-handler.external.mailto", true);'.
Reproducible: Always
Steps to Reproduce:
1. Create a new profile.
2. Add a "[New] -> [Boolean]" in about:config.
3. Enter network.protocol-handler.external.mailto to the preference name,
and its value set to true.
4. Click the any link that is mailto protocol.
Actual Results:
Mozilla said "mailto is not a registerd protocol".
And external mailer was not launched.
Expected Results:
External mailer should be luaunched.
This problem is reproduced on trunk only,
it works fine on 1.7 branch.
| Reporter | ||
Updated•21 years ago
|
Summary: mailto protocol does not be worked when using external mailer → mailto protocol is not worked when using external mailer
Comment 1•21 years ago
|
||
Is not problem in the registering of the 'mailto:' in Windows itself?
What happened when you try Srart->Run 'mailto:' -> will it start some application?
| Reporter | ||
Comment 3•21 years ago
|
||
Met: My system has no problem.
It works fine from [start] -> [run]
See comment 0.
It *works fine* on 1.7 branch.
| Reporter | ||
Comment 4•21 years ago
|
||
2004052009-trunk/WinXP is good.
2004052108-trunk/WinXP is buggy.
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2004-05-20&maxdate=2004-05-21+08%3A00%3A00&cvsroot=%2Fcvsroot
Keywords: regression
Comment 5•21 years ago
|
||
This bug also occurs under MacOSX 10.3.4 with the latest daily build. So, the
Hardware and OS categories need to be changed to "All" by the Reporter of this
bug or some other empowered party.
| Reporter | ||
Comment 6•21 years ago
|
||
Is this problem reproduced with Linux and BSD?
Hardware and OS to All.
OS: Windows XP → All
Hardware: PC → All
Comment 7•21 years ago
|
||
Linux/FreeBSD issue is Bug 194717 which is old.
But confirmed the regression on 2004052208/Mac.
Marking New.
Over to File Handling.
Assignee: general → file-handling
Status: UNCONFIRMED → NEW
Component: Browser-General → File Handling
Ever confirmed: true
QA Contact: general → ian
Summary: mailto protocol is not worked when using external mailer → [Win,Mac] mailto protocol is not worked when using external mailer
Updated•21 years ago
|
Comment 8•21 years ago
|
||
confirming win2k 2004052909
I'd suspect:
1.173 bzbarsky%mit.edu 2004-05-20 17:28 Blocked protocols should still allow
URI creation; they should just fail
channel creation. Bug 244220, r+sr=darin
Comment 9•21 years ago
|
||
eh
bz:
if (externalProtocol || NS_FAILED(rv)) {
// If the pref for this protocol was explicitly set to false, we want to
// use our special "blocked protocol" handler. That will ensure we don't
// open any channels for this protocol.
if (listedProtocol) {
rv = CallGetService(NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX"default-blocked",
result);
if (NS_FAILED(rv)) return NS_ERROR_UNKNOWN_PROTOCOL;
That codepath seems broken. We only want default-blocked if externalProtocol is
_false_, because if it is true, we want to make sure to get the default protocol
handler, because we _want_ to get the os handler.
| Assignee | ||
Comment 10•21 years ago
|
||
Assignee: file-handling → bzbarsky
Status: NEW → ASSIGNED
| Assignee | ||
Comment 11•21 years ago
|
||
Comment on attachment 149651 [details] [diff] [review]
Doh. Fix.
We only want to use the blocked handler if we have the protocol listed as
"don't do external". The old code did it if it was listed at all...
Attachment #149651 -
Flags: superreview?(darin)
Attachment #149651 -
Flags: review?(cbiesinger)
| Assignee | ||
Updated•21 years ago
|
Priority: -- → P1
Summary: [Win,Mac] mailto protocol is not worked when using external mailer → [FIX]mailto protocol is not worked when using external mailer
Target Milestone: --- → mozilla1.8alpha2
Updated•21 years ago
|
Attachment #149651 -
Flags: review?(cbiesinger) → review+
Updated•21 years ago
|
Attachment #149651 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 12•21 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•9 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•