Fix regression bug 244926.  Only use the "blocked protocol" handler for protocols that are actually blocked.  r=biesi, sr=darin